# pico-w-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  codeql.yml
include/harbys-ssd1306/: ssd1306.cpp  ssd1306.h
src/: flash.cpp  handler.cpp  info.cpp  lwipopts.h  main.cpp  ntp.cpp  sender.cpp  server-utils.cpp  server.cpp  types.cpp
src/extras/: Display.cpp
src/services/: desk.cpp  thermostat.cpp
